# sssom

./: .gitignore  .gitmodules  .prettierignore  404.html  ABOUT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  EntityReference.md  EntityTypeEnum.md  LICENSE  MakeConfig  Makefile  Mapping.md  MappingCardinalityEnum.md  MappingSet.md  PYPI_SETUP.md  Pipfile  PredicateModifierEnum.md  PreprocessingMethodEnum.md  README.md  SSOM.md  SSSOM.md  about.yaml  author_id.md  author_label.md  build.sh  comment.md  commit.txt  confidence.md  context.jsonld  creator_id.md  creator_label.md  equivalent_property.md  faq.md  index.html  index.md  license.md  mapping_cardinality.md  mapping_date.md  (+59 more)
.github/: pull_request_template.md
1.0/: 404.html  index.html  sitemap.xml
5star-mappings/: index.html
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EntityReference/: index.html
EntityTypeEnum/: index.html
ExtensionDefinition/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
LiteralMapping/: index.html
Mapping/: index.html
MappingCardinalityEnum/: index.html
MappingRegistry/: index.html
MappingSet/: index.html
MappingSetReference/: index.html
MatchTermTypeEnum/: index.html
MatchTypeEnum/: index.html
Ncname/: index.html
NoTermFound/: index.html
Nodeidentifier/: index.html
NonRelativeURI/: index.html
Objectidentifier/: index.html
PredicateModifierEnum/: index.html
Prefix/: index.html
PreprocessingMethodEnum/: index.html
Propagatable/: index.html
Sparqlpath/: index.html
SssomVersionEnum/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
Versionable/: index.html
about/: index.html
added_in/: index.html
author_id/: index.html
author_label/: index.html
cardinality_scope/: index.html
chaining-rules/: index.html
chaining_rules/: index.html
code_of_conduct/: index.html
comment/: index.html
confidence/: index.html
confidence-model/: index.html
contact/: index.html
contributing/: index.html
create-mapping-commons/: index.html
creator_id/: index.html
creator_label/: index.html
credits/: index.html
curation_rule/: index.html
curation_rule_text/: index.html
curie_map/: index.html
dev/: 404.html  index.html  sitemap.xml
docs/: 404.html  index.html  search.html  sitemap.xml
documentation/: index.html
editors/: index.html
equivalent_property/: index.html
examples/: README.md
experimental/: shex
extension_definitions/: index.html
faq/: index.html
funding/: index.html
getting-started/: index.html
glossary/: index.html
home/: index.html
homepage/: index.html
images/: README.md
imports/: index.html
introduction/: index.html
issue_tracker/: index.html
issue_tracker_item/: index.html
last_updated/: index.html
license/: index.html
linkml-index/: index.html
literal/: index.html
literal_datatype/: index.html
literal_preprocessing/: index.html
literal_source/: index.html
literal_source_version/: index.html
local_name/: index.html
make-venv/: README.md
mapping-commons/: index.html
mapping-justifications/: index.html
mapping-predicates/: index.html
mapping_cardinality/: index.html
mapping_date/: index.html
mapping_justification/: index.html
mapping_predicates/: index.html
mapping_provider/: index.html
mapping_registry_description/: index.html
mapping_registry_id/: index.html
mapping_registry_title/: index.html
mapping_set_confidence/: index.html
mapping_set_description/: index.html
mapping_set_group/: index.html
mapping_set_id/: index.html
mapping_set_references/: index.html
mapping_set_source/: index.html
mapping_set_title/: index.html
mapping_set_version/: index.html
mapping_source/: index.html
mapping_tool/: index.html
mapping_tool_id/: index.html
mapping_tool_version/: index.html
mappings/: index.html
match_string/: index.html
match_term_type/: index.html
match_type/: index.html
matching-tool-implementation-guide/: index.html
mc2021/: index.html
metadata_element/: index.html
mirror_from/: index.html
object_category/: index.html
object_id/: index.html
object_label/: index.html
object_match_field/: index.html
object_preprocessing/: index.html
object_source/: index.html
object_source_version/: index.html
object_type/: index.html
other/: index.html
predicate_id/: index.html
predicate_label/: index.html
predicate_modifier/: index.html
predicate_type/: index.html
prefix_name/: index.html
prefix_url/: index.html
presentations/: index.html
propagated/: index.html
property/: index.html
publication_date/: index.html
rdf_example/: index.html
record-identifiers/: index.html
record_id/: index.html
registry_confidence/: index.html
related-documentation/: index.html
required/: index.html
review_date/: index.html
reviewer_agreement/: index.html
reviewer_id/: index.html
reviewer_label/: index.html
scope/: index.html
scripts/: gh_table.pl
search/: search_index.json
see_also/: index.html
semantic_similarity_measure/: index.html
semantic_similarity_score/: index.html
similarity_measure/: index.html
similarity_score/: index.html
slot_name/: index.html
spec/: index.html
spec-formats/: index.html
spec-formats-json/: index.html
spec-formats-owl/: index.html
spec-formats-rdf/: index.html
spec-formats-tsv/: index.html
spec-intro/: index.html
spec-model/: index.html
spec-support/: index.html
spec-support-hashing/: index.html
src/: CONFIG.yaml
sssom/: index.html  sssom.py
sssom-profiles/: index.html
sssom_version/: index.html
subject_category/: index.html
subject_id/: index.html
subject_label/: index.html
subject_match_field/: index.html
subject_preprocessing/: index.html
subject_source/: index.html
subject_source_version/: index.html
subject_type/: index.html
tests/: test_added_in_annotations.py  (+1 more)
(+688 files in other folders)
