[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "sssom-schema"
description = "SSSOM is a Simple Standard for Sharing Ontology Mappings."
authors = [
  {name = "Nicolas Matentzoglu", email = "nicolas.matentzoglu@gmail.com"},
  {name = "Harshad Hegde", email = "hhegde@lbl.gov"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["schema", "ontology", "mappings", "sssom"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10.0"
dynamic = ["version"]
dependencies = [
    "jinjanator",
    "linkml-runtime==1.10.0rc5",
]

[project.optional-dependencies]
docs = [
    "linkml==1.10.0rc5",
    "mkdocs-material >= 8.2.8",
    "mkdocs-mermaid2-plugin >= 1.1.1",
]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.8.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = "1.10.0rc5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^1.1.1"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.pdf,*.lock'
check-hidden = true
ignore-regex = '\b(COMENT|EHR|LOD)\b'
ignore-words-list = 'disjointness'