[metadata]
name = sssom
url = https://github.com/mapping-commons/sssom
author = ABC
author_email = abc@xyz
summary = SSSOM
description = SSSOM
long_description = SSSOM
home_page = https://mapping-commons.github.io/sssom
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    sssom

data-files = sssom/model = sssom/model/*
    sssom/jsonld_context = sssom/jsonld_context/*
    sssom/json_schema = sssom/json_schema/*
    sssom/model = sssom/model/*


